--- a/index.html
+++ b/index.html
@@ -96,14 +96,7 @@
 
   <div class="container">
     <h1 class="mxl">MXL</h1>
-    <p class="tagline">Software Engineer &middot; Builder &middot; Creator</p>
-    
-    <div class="links">
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-      <a href="https://twitter.com/yourusername" target="_blank">Twitter</a>
-      <a href="mailto:hi@mxl.fi">Email</a>
-      <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-    </div>
+    <p class="tagline">Professional Services</p>
   </div>
 
   <!-- Particles.js -->
